WEB前端页面修改

--- a/代码类/WEB用户前端/WEB学生前端/www/live_room/live_room1.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/live_room/live_room1.html
@@ -148,8 +148,9 @@
 					<span style="color:#FFFFFF;">云智教育</span>
 					<input type="text" placeholder="" style="border: 1px solid #DBDBDB;border-radius:5px;height:20px;" />
 					<input type="submit" style="border: 1px solid #DBDBDB;border-radius:1px;height:20px;" />
-					<img style="width:38px;margin-left:60%;" src="../img/toux.png" />
-					<a href="index.html" style="color:#FFFFFF;float:right;margin-right:50px;">退出</a>
+
+					<a href="organization.html" style="margin-left:10px;float:right;color:#FFFFFF;">登录</a>
+					<a href="#" style="color:#FFFFFF;float: right;">注册</a>
 				</div>
 			</div>
 			<div id="top" style="width:67%;">
@@ -213,6 +214,7 @@
 						<a style="color:#FFFFFF;" href="#">关于我们</a>&nbsp;&nbsp;
 						<a style="color:#FFFFFF;" href="#">使用帮助</a>&nbsp;&nbsp;
 						<a style="color:#FFFFFF;" href="#">加入我们</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">管理登录</a>&nbsp;&nbsp;
 						<a style="color:#FFFFFF;" href="#">问题反馈</a>&nbsp;
 						<br />
 						<br />
@@ -222,15 +224,15 @@
 					</div>
 					<div id="QR_Code" style="margin-left:36%;margin-top:20px;">
 						<div style="text-align:center;margin-right:10px;">
-							<img style="width:120px;height:120px;" src="img/APP_Student.png" />
+							<img style="width:120px;height:120px;" src="../img/APP_Student.png" />
 							<h5><b>学生APP</b></h5>
 						</div>
 						<div style="text-align:center;margin-right:10px;">
-							<img style="width:120px;height:120px;" src="img/APP_Teacher.png" />
+							<img style="width:120px;height:120px;" src="../img/APP_Teacher.png" />
 							<h5><b>教师APP</b></h5>
 						</div>
 						<div style="text-align:center;margin-right:10px;">
-							<img style="width:120px;height:120px;" src="img/WeCha.jpeg" />
+							<img style="width:120px;height:120px;" src="../img/WeCha.jpeg" />
 							<h5><b>微信公众号</b></h5>
 						</div>
 					</div>
