--- a/代码类/WEB用户前端/WEB学生前端/www/organization_enter.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/organization_enter.html
@@ -79,8 +79,8 @@
 					<span style="color:#FFFFFF;">云智教育</span>
 					<input type="text" placeholder="" style="border: 1px solid #DBDBDB;border-radius:5px;height:20px;" />
 					<input type="submit" style="border: 1px solid #DBDBDB;border-radius:1px;height:20px;" />
-					<img style="width:38px;margin-left:60%;" src="img/toux.png" />
-					<a href="index.html" style="color:#FFFFFF;float:right;margin-right:50px;">退出</a>
+					<a href="organization.html" style="margin-left:10px;float:right;color:#FFFFFF;">登录</a>
+					<a href="#" style="color:#FFFFFF;float: right;">注册</a>
 				</div>
 			</div>
 			<div id="main" style="width:100%;height:800px;">
