--- a/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_H.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_H.html
@@ -77,25 +77,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州电子科技大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州信息大学001</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州师范大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州信息小学002</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州电子科技大学信息工程学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州信息学院002</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">丽水学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">杭州测试学校003</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -103,25 +103,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">湖州师范学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州信息学院002</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州职业技术学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州测试小学</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">湖州职业技术学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州测试学校003</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">杭州科技职业技术学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">杭州通信学院001</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -129,25 +129,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州万向职业技术学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州通信学院001</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">合肥工业大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州信息小学001</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">淮北师范大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州测试小学</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">黄山学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">杭州信息学院002</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -155,51 +155,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">淮南师范学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州测试学校004</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">淮南师范学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">杭州测试学校004</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">淮南联合大学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">杭州某机构003</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">合肥职业技术学院</a></h5>
-						</div>
-					</li>
-				</ul>
-				<ul class="clearfix" type="none">
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">淮北师范大学信息学院</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">合肥师范学院</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;height:61px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">合肥共达职业技术学院</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">徽商职业学院</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">杭州信息学院001</a></h5>
 						</div>
 					</li>
 				</ul>
