--- a/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_J.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_J.html
@@ -78,25 +78,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5428be99bd158.jpg" width="48" height="48" alt="阿拉善职业技术学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-3072.html">金华通信学院001</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-3072.html">嘉兴测试学校004</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/542a6284046cb.jpg" width="48" height="48" alt="鞍山师范学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-3144.html">金华测试小学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-3144.html">嘉兴测试学校003</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0150XM0-1BZ6.jpg" width="48" height="48" alt="安徽大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1162.html">金华测试学校003</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1162.html">嘉兴某机构004</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z015Q5210-116412.jpg" width="48" height="48" alt="安徽工业大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1165.html">金华某机构004</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1165.html">嘉兴某机构003</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -104,28 +104,28 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0154Y40-1U493.jpg" width="48" height="48" alt="安徽理工大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1191.html">金华某机构003</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1191.html">嘉兴信息学院001</a></h5>
 						</div>
 
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z016231340-B409.jpg" width="48" height="48" alt="安徽工程大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1170.html">衡州通信学院001</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1170.html">金华通信学院001</a></h5>
 						</div>
 
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z015A6010-11VD.jpg" width="48" height="48" alt="安徽农业大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1151.html">衡州测试小学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1151.html">金华测试小学</a></h5>
 						</div>
 
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a049ee2fc.jpg" width="48" height="48" alt="安徽医科大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1155.html">衡州测试学校003</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1155.html">金华测试学校003</a></h5>
 						</div>
 
 					</li>
@@ -134,25 +134,25 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">衡州信息小学002</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">金华某机构004</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0155561P-113258.jpg" width="48" height="48" alt="杭州师范大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">舟山测试小学</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1728.html">金华某机构003</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;height:61px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541bb76459a2b.jpg" width="48" height="48" alt="杭州电子科技大学信息工程学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">舟山测试学校004</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1731.html">金华信息小学002</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z0164Q160-D243.jpg" width="48" height="48" alt="丽水学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">舟山测试学校003</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-293.html">金华信息小学001</a></h5>
 						</div>
 					</li>
 				</ul>
@@ -160,53 +160,16 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53477d0c695ec.jpg" width="48" height="48" alt="清华大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2216.html">舟山某机构004</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2216.html">金华信息学院002</a></h5>
 						</div>
 					</li>
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/54080f6a54180.jpg" width="48" height="48" alt="衢州学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2636.html">舟山某机构003</a></h5>
+							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2636.html">金华信息学院001</a></h5>
 						</div>
 					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53476015977d2.jpg" width="48" height="48" alt="外交学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-980.html">舟山信息小学002</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53477d80e9a67.jpg" width="48" height="48" alt="浙江大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2137.html">舟山信息小学001</a></h5>
-						</div>
-					</li>
-				</ul>
-				<ul class="clearfix" type="none">
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/53479e05164ee.jpg" width="48" height="48" alt="浙江工业大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2140.html">舟山信息学院002</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a0081d3ef.jpg" width="48" height="48" alt="浙江理工大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2161.html">舟山信息学院001</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/13Z015I1250-1Q131.jpg" width="48" height="48" alt="浙江农林大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2128.html">浙江测试学院001</a></h5>
-						</div>
-					</li>
-					<li>
-						<div class="hd" class="hd" style="float:left;width:150px;">
-							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/541fc63438d5c.jpg" width="48" height="48" alt="浙江工商职业技术学院" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-2146.html">浙江测试学院002</a></h5>
-						</div>
-					</li>
+					
 				</ul>
 			</div>
 		</div>
