--- a/代码类/WEB用户前端/WEB学生前端/www/schools/school_1.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/schools/school_1.html
@@ -142,6 +142,8 @@
 					<input type="text" placeholder="" style="border: 1px solid #DBDBDB;border-radius:5px;height:20px;" />
 					<input type="submit" style="border: 1px solid #DBDBDB;border-radius:1px;height:20px;" />
 
+					<a href="organization.html" style="margin-left:10px;float:right;color:#FFFFFF;">登录</a>
+					<a href="#" style="color:#FFFFFF;float: right;">注册</a>
 				</div>
 			</div>
 			<!--
@@ -340,6 +342,7 @@
 						<a style="color:#FFFFFF;" href="#">关于我们</a>&nbsp;&nbsp;
 						<a style="color:#FFFFFF;" href="#">使用帮助</a>&nbsp;&nbsp;
 						<a style="color:#FFFFFF;" href="#">加入我们</a>&nbsp;&nbsp;
+						<a style="color:#FFFFFF;" href="#">管理登录</a>&nbsp;&nbsp;
 						<a style="color:#FFFFFF;" href="#">问题反馈</a>&nbsp;
 						<br />
 						<br />
