WEB前端修复企业选择跳转界面被Iframe限制问题

--- a/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_H.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/school_l/school_list_H.html
@@ -77,7 +77,7 @@
 					<li>
 						<div class="hd" style="float:left;width:150px;">
 							<!--<div class="pic"><img src="http://cdn.stc.gaokaopai.com/Public/Uploads/5347a61391a9a.jpg" width="48" height="48" alt="杭州电子科技大学" onerror="this.onerror=null; this.src='http://cdn.stc.gaokaopai.com/Public/Images/dimg.jpg'" /></div>-->
-							<h5><a href="http://www.gaokaopai.com/daxue-jianjie-1730.html">杭州信息大学001</a></h5>
+							<h5><a href="../schools/school_1.html" target="_parent">杭州测试学院</a></h5>
 						</div>
 					</li>
 					<li>
