--- a/代码类/WEB用户前端/WEB学生前端/www/schools/school_1.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/schools/school_1.html
@@ -139,8 +139,9 @@
 				<div id="logo" style="padding-left:30px;width:100%;padding-right:30px;">
 					<img style="width:50px;height:35px;" src="../img/logo.png" />
 					<span style="color:#FFFFFF;line-height:50px;margin-left:20px;font-size:16px;">云智教育</span>
-					<a href="organization.html" style="float:right;color:#FFFFFF;line-height:50px;">登录</a>
+				<!--	<a href="organization.html" style="float:right;color:#FFFFFF;line-height:50px;">登录</a>
 					<a href="#" style="color:#FFFFFF;float: right;line-height:50px;margin-right:20px;">注册</a>
+				-->
 				</div>
 			</div>
 			<!--
