WEB教师前端页面完善

--- a/代码类/WEB用户前端/WEB教师前端/www/course_d.html
+++ b/代码类/WEB用户前端/WEB教师前端/www/course_d.html
@@ -47,9 +47,9 @@
 				text-decoration: none;
 			}
 			
-			/*div {
+			div {
 				border: 1px solid #000000;
-			}*/
+			}
 			
 			#btn {
 				float: left;
@@ -114,6 +114,12 @@
 			}
 			#top_b ul li{
 				margin-top:20px;
+			}
+			#cou_menu ul li{
+				height:30px;
+				margin-top:10px;
+				line-height:30px;
+				background-color:#F8F8FF;
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/H-ui.min.css" />
@@ -192,7 +198,7 @@
             	时间：2018-04-18
             	描述：主体部分
             -->
-			<div id="main" style="width:90%;height:800px;background-color:#F8F8F8;margin-top:20px;margin-left:5%;">
+			<div id="main" style="width:90%;height:700px;background-color:#F8F8F8;margin-top:20px;margin-left:5%;">
 				<div style="width:90%;height:20px;margin-left:5%;">
 					<a href="#" style="text-decoration:none;"><返回首页</a>
 				</div>
@@ -210,29 +216,40 @@
 						</div>
 						<div id="top_r" style="width:600px;height:100px;float:left;margin-left:50px;">
 							<ul>
-								<li>1.1认识JAVA</li>
-								<li><input type="file" style="border-radius:2px;border:1px solid #999999;"/></li>
-								<li>知识点：</li>
+								<li>JAVA程序设计</li>
+								<li>课程代码：891238907</li>
+								<li>课程容量：120人&nbsp;&nbsp;学习人数：56</li>
 							</ul>
 						</div>
 					</div>
-					<div id="top_b" style="width:100%;height:100px;">
-						<ul>
-							<li>Java是一种跨平台的语言</li>
-							<li>Java的跨平台体现在JVM虚拟机上面</li>
-						</ul>
+					<div id="top_b" style="width:80%;height:100px;margin-left:10%;margin-top:10px;">
+						<span>课程介绍：</span>
+						<p>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;课程的重点包括：控制结构和语句的应用、数组及其应用、方法定义和方法调用、类的概念和应用、
+							类的继承、封装和多态，抽象类、接口、内部类、异常处理、GUI、文件的应用、集合、反射和泛型。
+							本课程的难题有：方法重载和覆盖、访问控制、抽象类、内部类、接口及接口回调、泛型、反射。
+						</p>
 					</div>
 				</div>
 				<div style="width:90%;height:300px;margin-left:5%;">
 					<div style="width:100%;border-bottom:1px solid #999999;">
-						<ul style="margin-left:30px;display: flex;">
-							<li><a href="#" style="text-decoration:none;">课程交流</a></li>
+						<ul style="height:20px;margin-left:30px;display: flex;">
+							<li><a href="#" style="text-decoration:none;">课程目录</a></li>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<li><a href="#" style="text-decoration:none;">综合练习</a></li>
+							<li><a href="#" style="text-decoration:none;">课程考试</a></li>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<li><a href="#" style="text-decoration:none;">课程资料</a></li>
+							<a title="添加" style="margin-left:75%;" href="#">
+								<img style="height:20px;" src="img/add.png"/>
+							</a>
 						</ul>
-					</div>
-					<div>
 						
+					</div>
+					<div id="cou_menu" style="width:100%;">
+						<ul style="width:90%;margin-left:5%;">
+							<li>1.1认识Java</li>
+							<li>1.2Java开发工具</li>
+						</ul>
 					</div>
 				</div>
 			</div>
