--- a/代码类/WEB用户前端/WEB教师前端/www/teacher.html
+++ b/代码类/WEB用户前端/WEB教师前端/www/teacher.html
@@ -170,7 +170,7 @@
 					<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 						<ul class="cl">
 							<li class="dropDown dropDown_hover">
-								<a href="#" class="dropDown_A">admin</a>
+								<a href="#" class="dropDown_A">廖老师</a>
 								<ul class="dropDown-menu menu radius box-shadow">
 									<li>
 										<a href="login.html">退出</a>
