delete some word where create on linux and unnessary for windows

--- a/代码类/WEB管理端前端/运营管理平台/www/index.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/index.html
@@ -24,16 +24,16 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="container-fluid cl">
 		 <a class="logo navbar-logo f-l mr-10 hidden-xs" href="#">
-		 	<img src="img/logo.png">
+		 	<img width="40px" height="40px" src="img/logo.png">
 		 </a>
 			<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 			
 		<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 			<ul class="cl">
-				<li>超级管理员</li>
 				<li class="dropDown dropDown_hover">
 					<a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
-					<ul class="dropDown-menu menu radius box-shadow">z
+					<ul class="dropDown-menu menu radius box-shadow">
+						<li><a href="login.html">修改密码</a></li>
 						<li><a href="login.html">退出</a></li>
 				</ul>
 			</li>
